# ai-architect-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  skill-version-manifest.json
.claude-plugin/: plugin.json  (+1 more)
ai-codebase-intelligence/: .mcp.json  README.md  pyproject.toml
ai-codebase-intelligence/.claude-plugin/: plugin.json
ai-codebase-intelligence/hooks/: codebase_hook.py  hooks.json
ai-codebase-intelligence/skills/cli/: SKILL.md
ai-codebase-intelligence/skills/debugging/: SKILL.md
ai-codebase-intelligence/skills/exploring/: SKILL.md
ai-codebase-intelligence/skills/guide/: SKILL.md
ai-codebase-intelligence/skills/impact-analysis/: SKILL.md
ai-codebase-intelligence/skills/indexing/: SKILL.md
ai-codebase-intelligence/skills/pr-review/: SKILL.md
ai-codebase-intelligence/skills/refactoring/: SKILL.md
ai-codebase-intelligence/src/ai_codebase_intelligence/: __init__.py  __main__.py  _app.py  _server_entry.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_adapters/: __init__.py  composition_root.py  fts5_adapter.py  in_memory_adapter.py  ports.py  sqlite_adapter.py  tree_sitter_adapter.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_analysis/: community_processor.py  entry_point_scoring.py  framework_detection.py  process_processor.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_augmentation/: __init__.py  engine.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_cli/: __init__.py  augment_cmd.py  serve_cmd.py  wiki_cmd.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_config/: __init__.py  defaults.toml  ignore_service.py  loader.py  models.py  supported_languages.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_embeddings/: __init__.py  embedder.py  embedding_pipeline.py  text_generator.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_extraction/: __init__.py  call_extractor.py  call_routing.py  enclosing_scope.py  export_detection.py  heritage_extractor.py  heritage_processor.py  import_extractor.py  import_extractor_langs.py  import_processor.py  mro_processor.py  structure_processor.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_models/: conversion.py  graph_models.py  graph_types.py  pipeline_types.py  search_types.py  tool_types_ext.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_parsing/: ast_cache.py  parser_loader.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_pipeline/: __init__.py  chunk_manager.py  embedding_phase.py  filesystem_walker.py  incremental.py  resolve_phase.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_resolution/: resolution_context.py  symbol_table.py  type_env.py
ai-codebase-intelligence/src/ai_codebase_intelligence/_search/: __init__.py  hybrid_search.py  in_memory_search.py  search_engine.py
ai-codebase-intelligence/tests/integration/: test_parsing_integration.py
ai-codebase-intelligence/tests/unit/: test_analysis.py  test_bus_factor.py  test_call_extractor.py  test_call_graph.py  test_churn_metrics.py  test_cli_commands.py  test_cochange_processor.py  test_community_detection.py  test_context_generator.py  test_dead_code.py  test_embedding_persistence.py  test_embeddings.py  test_embeddings_integration.py  test_git_utils.py  test_graph_types.py  test_heritage_extractor.py  test_heritage_mro.py  test_http_server.py  test_ignore_service.py  test_import_extractor.py  test_import_resolution.py  test_in_memory_graph.py  test_incremental.py  test_ownership_processor.py  test_parsing.py  test_pipeline.py  test_pipeline_types.py  test_process_detection.py  test_repo_manager.py  test_resolution.py  test_resolve_phase.py  test_schema_completeness.py  test_search.py  test_search_engine.py  test_search_types.py  test_server.py  test_supported_languages.py  test_tools_implementation.py  test_type_extractors.py  test_wiki.py
mcp/: README.md  pyproject.toml
mcp/.pipeline/: brain-trace.jsonl
mcp/ai_architect_mcp/: __init__.py  __main__.py  _app.py  server.py
mcp/ai_architect_mcp/_adapters/: __init__.py  composition_root.py  filesystem_adapter.py  git_adapter.py  github_actions_composition.py  github_actions_context.py  github_actions_filesystem.py  github_actions_git.py  github_actions_github.py  github_actions_xcode.py  github_adapter.py  local_audit.py  local_experience.py  local_pipeline_state.py  mcp_client_base.py  mcp_result_parser.py  memory_ports.py  ports.py  ports_data.py  ports_github.py  sampling_client.py  xcode_adapter.py  xcode_mcpbridge_adapter.py
mcp/ai_architect_mcp/_config/: __init__.py  defaults.toml  loader.py  models.py
mcp/ai_architect_mcp/_context/: __init__.py  artifact_store.py  budget_monitor.py  handoff.py  progressive_disclosure.py  stage_context.py  stage_prerequisites.py
mcp/ai_architect_mcp/_hooks/: __init__.py  base.py  enforce_doc_read.py  observe_events.py  registry.py  save_session_summary.py  security_tier.py  session_start.py  update_pipeline_state.py  validate_output_schema.py
mcp/ai_architect_mcp/_interview/: __init__.py  gate.py  models.py
mcp/ai_architect_mcp/_models/: __init__.py  audit_event.py  consensus.py  disclosure.py  experience_pattern.py  finding.py  graph.py  pipeline.py  prompting.py  scoring.py  session_state.py  verification.py
mcp/ai_architect_mcp/_observability/: __init__.py  composite_adapter.py  emitters.py  event_types.py  file_adapter.py  instrumentation.py  observability_port.py  sse_adapter.py
mcp/ai_architect_mcp/_prompting/: __init__.py  confidence_fusion.py  llm_cache.py
mcp/ai_architect_mcp/_scoring/: __init__.py  compound.py  propagation.py
mcp/ai_architect_mcp/_templates/: README.md
mcp/ai_architect_mcp/_tools/: __init__.py  _coercion.py  _composition.py  adapter_tools.py  context_tools.py  hor_tools.py  interview_tools.py  memory_tools.py  pipeline_tools.py  prompting_tools.py  scoring_tools.py  verification_tools.py  xcode_tools.py
mcp/ai_architect_mcp/_verification/: __init__.py  consensus_router.py
(+538 files in other folders)
