[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-architect"
version = "0.1.0"
description = "Autonomous software engineering pipeline built on Anthropic best practices"
requires-python = ">=3.12"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
