[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-architect-mcp"
version = "0.1.0"
description = "AI Architect MCP server — verification, prompting, context, and adapter tools"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pydantic>=2.0",
    "anthropic",
]

[project.scripts]
ai_architect_mcp = "ai_architect_mcp.server:main"
