[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-automated-pipeline"
version = "0.1.2"
description = "Autonomous software engineering pipeline — 49 MCP tools, 64 verification rules, 11 pipeline stages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-architect",
    "verification",
    "prd",
    "autonomous-engineering",
    "code-generation",
    "claude",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "anthropic",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/cdeust/ai-architect-mcp"
Repository = "https://github.com/cdeust/ai-architect-mcp"
Issues = "https://github.com/cdeust/ai-architect-mcp/issues"

[project.scripts]
ai_architect_mcp = "ai_architect_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_architect_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "ai_architect_mcp",
    "README.md",
    "pyproject.toml",
]
